// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date-time-picker :base 1`] = `
<main>
  <t-date-time-picker>
    <t-picker
      class="t-date-time-picker"
      bind:cancel="onCancel"
      bind:change="onConfirm"
      bind:pick="onColumnChange"
      bind:visible-change="onVisibleChange"
    >
      <t-popup
        bind:visible-change="onPopupChange"
      >
        <wx-view
          ariaModal="{{true}}"
          ariaRole="dialog"
          class="t-popup t-popup--bottom t-fade-enter t-fade-enter-active class t-class"
          style="z-index:11500;"
          bind:transitionend="onTransitionEnd"
        >
          <wx-view
            class="t-popup__content t-class-content"
          >
            <wx-view
              class="t-popup__close"
              bind:tap="handleClose"
            />
            <wx-view
              class="t-picker t-class"
              focus="{{true}}"
              slot="content"
              style=""
              tabindex="-1"
            >
              <wx-view
                class="t-picker__toolbar"
              >
                <wx-view
                  ariaRole="button"
                  class="t-picker__cancel t-class-cancel"
                  bind:tap="onCancel"
                >
                  取消
                </wx-view>
                <wx-view
                  ariaLabel="选择日期选择框"
                  class="t-picker__title t-class-title"
                  focus="{{true}}"
                >
                  选择日期
                </wx-view>
                <wx-view
                  ariaRole="button"
                  class="t-picker__confirm t-class-confirm"
                  bind:tap="onConfirm"
                >
                  确定
                </wx-view>
              </wx-view>
              <wx-view
                class="t-picker__main"
              >
                <t-picker-item
                  class="t-date-time-picker__item"
                  index="index"
                >
                  <wx-view
                    class="t-picker-item__group class t-class"
                    style=""
                    bind:touchcancel="onTouchEnd"
                    bind:touchend="onTouchEnd"
                    catch:touchmove="onTouchMove"
                    bind:touchstart="onTouchStart"
                  >
                    <wx-view
                      class="t-picker-item__wrapper"
                      style="transition: transform 0ms cubic-bezier(0.215, 0.61, 0.355, 1); transform: translate3d(0, -924px, 0)"
                    >
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{0}}"
                        bind:tap="onTap"
                      >
                        
      2000年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{1}}"
                        bind:tap="onTap"
                      >
                        
      2001年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{2}}"
                        bind:tap="onTap"
                      >
                        
      2002年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{3}}"
                        bind:tap="onTap"
                      >
                        
      2003年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{4}}"
                        bind:tap="onTap"
                      >
                        
      2004年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{5}}"
                        bind:tap="onTap"
                      >
                        
      2005年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{6}}"
                        bind:tap="onTap"
                      >
                        
      2006年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{7}}"
                        bind:tap="onTap"
                      >
                        
      2007年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{8}}"
                        bind:tap="onTap"
                      >
                        
      2008年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{9}}"
                        bind:tap="onTap"
                      >
                        
      2009年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{10}}"
                        bind:tap="onTap"
                      >
                        
      2010年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{11}}"
                        bind:tap="onTap"
                      >
                        
      2011年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{12}}"
                        bind:tap="onTap"
                      >
                        
      2012年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{13}}"
                        bind:tap="onTap"
                      >
                        
      2013年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{14}}"
                        bind:tap="onTap"
                      >
                        
      2014年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{15}}"
                        bind:tap="onTap"
                      >
                        
      2015年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{16}}"
                        bind:tap="onTap"
                      >
                        
      2016年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{17}}"
                        bind:tap="onTap"
                      >
                        
      2017年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{18}}"
                        bind:tap="onTap"
                      >
                        
      2018年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{19}}"
                        bind:tap="onTap"
                      >
                        
      2019年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{20}}"
                        bind:tap="onTap"
                      >
                        
      2020年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item t-picker-item__item--active"
                        data-index="{{21}}"
                        bind:tap="onTap"
                      >
                        
      2021年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{22}}"
                        bind:tap="onTap"
                      >
                        
      2022年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{23}}"
                        bind:tap="onTap"
                      >
                        
      2023年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{24}}"
                        bind:tap="onTap"
                      >
                        
      2024年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{25}}"
                        bind:tap="onTap"
                      >
                        
      2025年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{26}}"
                        bind:tap="onTap"
                      >
                        
      2026年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{27}}"
                        bind:tap="onTap"
                      >
                        
      2027年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{28}}"
                        bind:tap="onTap"
                      >
                        
      2028年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{29}}"
                        bind:tap="onTap"
                      >
                        
      2029年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{30}}"
                        bind:tap="onTap"
                      >
                        
      2030年
    
                      </wx-view>
                    </wx-view>
                  </wx-scroll-view>
                </t-picker-item>
                <t-picker-item
                  class="t-date-time-picker__item"
                  index="index"
                >
                  <wx-view
                    class="t-picker-item__group class t-class"
                    style=""
                    bind:touchcancel="onTouchEnd"
                    bind:touchend="onTouchEnd"
                    catch:touchmove="onTouchMove"
                    bind:touchstart="onTouchStart"
                  >
                    <wx-view
                      class="t-picker-item__wrapper"
                      style="transition: transform 0ms cubic-bezier(0.215, 0.61, 0.355, 1); transform: translate3d(0, -352px, 0)"
                    >
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{0}}"
                        bind:tap="onTap"
                      >
                        
      1月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{1}}"
                        bind:tap="onTap"
                      >
                        
      2月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{2}}"
                        bind:tap="onTap"
                      >
                        
      3月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{3}}"
                        bind:tap="onTap"
                      >
                        
      4月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{4}}"
                        bind:tap="onTap"
                      >
                        
      5月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{5}}"
                        bind:tap="onTap"
                      >
                        
      6月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{6}}"
                        bind:tap="onTap"
                      >
                        
      7月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{7}}"
                        bind:tap="onTap"
                      >
                        
      8月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item t-picker-item__item--active"
                        data-index="{{8}}"
                        bind:tap="onTap"
                      >
                        
      9月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{9}}"
                        bind:tap="onTap"
                      >
                        
      10月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{10}}"
                        bind:tap="onTap"
                      >
                        
      11月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{11}}"
                        bind:tap="onTap"
                      >
                        
      12月
    
                      </wx-view>
                    </wx-view>
                  </wx-scroll-view>
                </t-picker-item>
                <wx-view
                  class="t-picker__mask t-picker__mask--top"
                />
                <wx-view
                  class="t-picker__mask t-picker__mask--bottom"
                />
                <wx-view
                  class="t-picker__indicator"
                />
              </wx-view>
            </wx-view>
          </wx-view>
        </wx-view>
        <t-overlay
          id="popup-overlay"
          bind:tap="handleOverlayClick"
        >
          <wx-view
            ariaLabel="关闭"
            ariaRole="button"
            class="t-overlay t-fade-enter t-fade-enter-active"
            style="z-index: 11000;  "
            bind:tap="handleClick"
            catch:touchmove="noop"
            bind:transitionend="onTransitionEnd"
          />
        </t-overlay>
      </t-popup>
    </t-picker>
  </t-date-time-picker>
</main>
`;

exports[`date-time-picker :second 1`] = `
<main>
  <t-date-time-picker>
    <t-picker
      class="t-date-time-picker"
      bind:cancel="onCancel"
      bind:change="onConfirm"
      bind:pick="onColumnChange"
      bind:visible-change="onVisibleChange"
    >
      <t-popup
        bind:visible-change="onPopupChange"
      >
        <wx-view
          ariaModal="{{true}}"
          ariaRole="dialog"
          class="t-popup t-popup--bottom t-fade-enter t-fade-enter-active class t-class"
          style="z-index:11500;"
          bind:transitionend="onTransitionEnd"
        >
          <wx-view
            class="t-popup__content t-class-content"
          >
            <wx-view
              class="t-popup__close"
              bind:tap="handleClose"
            />
            <wx-view
              class="t-picker t-class"
              focus="{{true}}"
              slot="content"
              style=""
              tabindex="-1"
            >
              <wx-view
                class="t-picker__toolbar"
              >
                <wx-view
                  ariaRole="button"
                  class="t-picker__cancel t-class-cancel"
                  bind:tap="onCancel"
                >
                  取消
                </wx-view>
                <wx-view
                  ariaLabel="选择框"
                  class="t-picker__title t-class-title"
                  focus="{{true}}"
                >
                  
                </wx-view>
                <wx-view
                  ariaRole="button"
                  class="t-picker__confirm t-class-confirm"
                  bind:tap="onConfirm"
                >
                  确定
                </wx-view>
              </wx-view>
              <wx-view
                class="t-picker__main"
              >
                <t-picker-item
                  class="t-date-time-picker__item t-date-time-picker__item--roomly"
                  index="index"
                >
                  <wx-view
                    class="t-picker-item__group class t-class"
                    style=""
                    bind:touchcancel="onTouchEnd"
                    bind:touchend="onTouchEnd"
                    catch:touchmove="onTouchMove"
                    bind:touchstart="onTouchStart"
                  >
                    <wx-view
                      class="t-picker-item__wrapper"
                      style="transition: transform 0ms cubic-bezier(0.215, 0.61, 0.355, 1); transform: translate3d(0, 0px, 0)"
                    >
                      <wx-view
                        class="t-picker-item__item t-picker-item__item--active"
                        data-index="{{0}}"
                        bind:tap="onTap"
                      >
                        
      2000年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{1}}"
                        bind:tap="onTap"
                      >
                        
      2001年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{2}}"
                        bind:tap="onTap"
                      >
                        
      2002年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{3}}"
                        bind:tap="onTap"
                      >
                        
      2003年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{4}}"
                        bind:tap="onTap"
                      >
                        
      2004年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{5}}"
                        bind:tap="onTap"
                      >
                        
      2005年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{6}}"
                        bind:tap="onTap"
                      >
                        
      2006年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{7}}"
                        bind:tap="onTap"
                      >
                        
      2007年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{8}}"
                        bind:tap="onTap"
                      >
                        
      2008年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{9}}"
                        bind:tap="onTap"
                      >
                        
      2009年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{10}}"
                        bind:tap="onTap"
                      >
                        
      2010年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{11}}"
                        bind:tap="onTap"
                      >
                        
      2011年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{12}}"
                        bind:tap="onTap"
                      >
                        
      2012年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{13}}"
                        bind:tap="onTap"
                      >
                        
      2013年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{14}}"
                        bind:tap="onTap"
                      >
                        
      2014年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{15}}"
                        bind:tap="onTap"
                      >
                        
      2015年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{16}}"
                        bind:tap="onTap"
                      >
                        
      2016年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{17}}"
                        bind:tap="onTap"
                      >
                        
      2017年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{18}}"
                        bind:tap="onTap"
                      >
                        
      2018年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{19}}"
                        bind:tap="onTap"
                      >
                        
      2019年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{20}}"
                        bind:tap="onTap"
                      >
                        
      2020年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{21}}"
                        bind:tap="onTap"
                      >
                        
      2021年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{22}}"
                        bind:tap="onTap"
                      >
                        
      2022年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{23}}"
                        bind:tap="onTap"
                      >
                        
      2023年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{24}}"
                        bind:tap="onTap"
                      >
                        
      2024年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{25}}"
                        bind:tap="onTap"
                      >
                        
      2025年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{26}}"
                        bind:tap="onTap"
                      >
                        
      2026年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{27}}"
                        bind:tap="onTap"
                      >
                        
      2027年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{28}}"
                        bind:tap="onTap"
                      >
                        
      2028年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{29}}"
                        bind:tap="onTap"
                      >
                        
      2029年
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{30}}"
                        bind:tap="onTap"
                      >
                        
      2030年
    
                      </wx-view>
                    </wx-view>
                  </wx-scroll-view>
                </t-picker-item>
                <t-picker-item
                  class="t-date-time-picker__item"
                  index="index"
                >
                  <wx-view
                    class="t-picker-item__group class t-class"
                    style=""
                    bind:touchcancel="onTouchEnd"
                    bind:touchend="onTouchEnd"
                    catch:touchmove="onTouchMove"
                    bind:touchstart="onTouchStart"
                  >
                    <wx-view
                      class="t-picker-item__wrapper"
                      style="transition: transform 0ms cubic-bezier(0.215, 0.61, 0.355, 1); transform: translate3d(0, 0px, 0)"
                    >
                      <wx-view
                        class="t-picker-item__item t-picker-item__item--active"
                        data-index="{{0}}"
                        bind:tap="onTap"
                      >
                        
      1月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{1}}"
                        bind:tap="onTap"
                      >
                        
      2月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{2}}"
                        bind:tap="onTap"
                      >
                        
      3月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{3}}"
                        bind:tap="onTap"
                      >
                        
      4月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{4}}"
                        bind:tap="onTap"
                      >
                        
      5月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{5}}"
                        bind:tap="onTap"
                      >
                        
      6月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{6}}"
                        bind:tap="onTap"
                      >
                        
      7月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{7}}"
                        bind:tap="onTap"
                      >
                        
      8月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{8}}"
                        bind:tap="onTap"
                      >
                        
      9月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{9}}"
                        bind:tap="onTap"
                      >
                        
      10月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{10}}"
                        bind:tap="onTap"
                      >
                        
      11月
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{11}}"
                        bind:tap="onTap"
                      >
                        
      12月
    
                      </wx-view>
                    </wx-view>
                  </wx-scroll-view>
                </t-picker-item>
                <t-picker-item
                  class="t-date-time-picker__item"
                  index="index"
                >
                  <wx-view
                    class="t-picker-item__group class t-class"
                    style=""
                    bind:touchcancel="onTouchEnd"
                    bind:touchend="onTouchEnd"
                    catch:touchmove="onTouchMove"
                    bind:touchstart="onTouchStart"
                  >
                    <wx-view
                      class="t-picker-item__wrapper"
                      style="transition: transform 0ms cubic-bezier(0.215, 0.61, 0.355, 1); transform: translate3d(0, 0px, 0)"
                    >
                      <wx-view
                        class="t-picker-item__item t-picker-item__item--active"
                        data-index="{{0}}"
                        bind:tap="onTap"
                      >
                        
      1日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{1}}"
                        bind:tap="onTap"
                      >
                        
      2日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{2}}"
                        bind:tap="onTap"
                      >
                        
      3日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{3}}"
                        bind:tap="onTap"
                      >
                        
      4日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{4}}"
                        bind:tap="onTap"
                      >
                        
      5日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{5}}"
                        bind:tap="onTap"
                      >
                        
      6日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{6}}"
                        bind:tap="onTap"
                      >
                        
      7日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{7}}"
                        bind:tap="onTap"
                      >
                        
      8日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{8}}"
                        bind:tap="onTap"
                      >
                        
      9日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{9}}"
                        bind:tap="onTap"
                      >
                        
      10日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{10}}"
                        bind:tap="onTap"
                      >
                        
      11日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{11}}"
                        bind:tap="onTap"
                      >
                        
      12日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{12}}"
                        bind:tap="onTap"
                      >
                        
      13日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{13}}"
                        bind:tap="onTap"
                      >
                        
      14日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{14}}"
                        bind:tap="onTap"
                      >
                        
      15日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{15}}"
                        bind:tap="onTap"
                      >
                        
      16日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{16}}"
                        bind:tap="onTap"
                      >
                        
      17日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{17}}"
                        bind:tap="onTap"
                      >
                        
      18日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{18}}"
                        bind:tap="onTap"
                      >
                        
      19日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{19}}"
                        bind:tap="onTap"
                      >
                        
      20日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{20}}"
                        bind:tap="onTap"
                      >
                        
      21日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{21}}"
                        bind:tap="onTap"
                      >
                        
      22日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{22}}"
                        bind:tap="onTap"
                      >
                        
      23日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{23}}"
                        bind:tap="onTap"
                      >
                        
      24日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{24}}"
                        bind:tap="onTap"
                      >
                        
      25日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{25}}"
                        bind:tap="onTap"
                      >
                        
      26日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{26}}"
                        bind:tap="onTap"
                      >
                        
      27日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{27}}"
                        bind:tap="onTap"
                      >
                        
      28日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{28}}"
                        bind:tap="onTap"
                      >
                        
      29日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{29}}"
                        bind:tap="onTap"
                      >
                        
      30日
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{30}}"
                        bind:tap="onTap"
                      >
                        
      31日
    
                      </wx-view>
                    </wx-view>
                  </wx-scroll-view>
                </t-picker-item>
                <t-picker-item
                  class="t-date-time-picker__item"
                  index="index"
                >
                  <wx-view
                    class="t-picker-item__group class t-class"
                    style=""
                    bind:touchcancel="onTouchEnd"
                    bind:touchend="onTouchEnd"
                    catch:touchmove="onTouchMove"
                    bind:touchstart="onTouchStart"
                  >
                    <wx-view
                      class="t-picker-item__wrapper"
                      style="transition: transform 0ms cubic-bezier(0.215, 0.61, 0.355, 1); transform: translate3d(0, 0px, 0)"
                    >
                      <wx-view
                        class="t-picker-item__item t-picker-item__item--active"
                        data-index="{{0}}"
                        bind:tap="onTap"
                      >
                        
      0时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{1}}"
                        bind:tap="onTap"
                      >
                        
      1时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{2}}"
                        bind:tap="onTap"
                      >
                        
      2时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{3}}"
                        bind:tap="onTap"
                      >
                        
      3时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{4}}"
                        bind:tap="onTap"
                      >
                        
      4时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{5}}"
                        bind:tap="onTap"
                      >
                        
      5时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{6}}"
                        bind:tap="onTap"
                      >
                        
      6时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{7}}"
                        bind:tap="onTap"
                      >
                        
      7时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{8}}"
                        bind:tap="onTap"
                      >
                        
      8时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{9}}"
                        bind:tap="onTap"
                      >
                        
      9时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{10}}"
                        bind:tap="onTap"
                      >
                        
      10时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{11}}"
                        bind:tap="onTap"
                      >
                        
      11时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{12}}"
                        bind:tap="onTap"
                      >
                        
      12时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{13}}"
                        bind:tap="onTap"
                      >
                        
      13时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{14}}"
                        bind:tap="onTap"
                      >
                        
      14时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{15}}"
                        bind:tap="onTap"
                      >
                        
      15时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{16}}"
                        bind:tap="onTap"
                      >
                        
      16时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{17}}"
                        bind:tap="onTap"
                      >
                        
      17时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{18}}"
                        bind:tap="onTap"
                      >
                        
      18时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{19}}"
                        bind:tap="onTap"
                      >
                        
      19时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{20}}"
                        bind:tap="onTap"
                      >
                        
      20时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{21}}"
                        bind:tap="onTap"
                      >
                        
      21时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{22}}"
                        bind:tap="onTap"
                      >
                        
      22时
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{23}}"
                        bind:tap="onTap"
                      >
                        
      23时
    
                      </wx-view>
                    </wx-view>
                  </wx-scroll-view>
                </t-picker-item>
                <t-picker-item
                  class="t-date-time-picker__item"
                  index="index"
                >
                  <wx-view
                    class="t-picker-item__group class t-class"
                    style=""
                    bind:touchcancel="onTouchEnd"
                    bind:touchend="onTouchEnd"
                    catch:touchmove="onTouchMove"
                    bind:touchstart="onTouchStart"
                  >
                    <wx-view
                      class="t-picker-item__wrapper"
                      style="transition: transform 0ms cubic-bezier(0.215, 0.61, 0.355, 1); transform: translate3d(0, 0px, 0)"
                    >
                      <wx-view
                        class="t-picker-item__item t-picker-item__item--active"
                        data-index="{{0}}"
                        bind:tap="onTap"
                      >
                        
      0分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{1}}"
                        bind:tap="onTap"
                      >
                        
      1分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{2}}"
                        bind:tap="onTap"
                      >
                        
      2分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{3}}"
                        bind:tap="onTap"
                      >
                        
      3分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{4}}"
                        bind:tap="onTap"
                      >
                        
      4分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{5}}"
                        bind:tap="onTap"
                      >
                        
      5分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{6}}"
                        bind:tap="onTap"
                      >
                        
      6分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{7}}"
                        bind:tap="onTap"
                      >
                        
      7分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{8}}"
                        bind:tap="onTap"
                      >
                        
      8分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{9}}"
                        bind:tap="onTap"
                      >
                        
      9分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{10}}"
                        bind:tap="onTap"
                      >
                        
      10分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{11}}"
                        bind:tap="onTap"
                      >
                        
      11分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{12}}"
                        bind:tap="onTap"
                      >
                        
      12分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{13}}"
                        bind:tap="onTap"
                      >
                        
      13分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{14}}"
                        bind:tap="onTap"
                      >
                        
      14分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{15}}"
                        bind:tap="onTap"
                      >
                        
      15分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{16}}"
                        bind:tap="onTap"
                      >
                        
      16分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{17}}"
                        bind:tap="onTap"
                      >
                        
      17分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{18}}"
                        bind:tap="onTap"
                      >
                        
      18分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{19}}"
                        bind:tap="onTap"
                      >
                        
      19分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{20}}"
                        bind:tap="onTap"
                      >
                        
      20分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{21}}"
                        bind:tap="onTap"
                      >
                        
      21分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{22}}"
                        bind:tap="onTap"
                      >
                        
      22分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{23}}"
                        bind:tap="onTap"
                      >
                        
      23分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{24}}"
                        bind:tap="onTap"
                      >
                        
      24分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{25}}"
                        bind:tap="onTap"
                      >
                        
      25分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{26}}"
                        bind:tap="onTap"
                      >
                        
      26分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{27}}"
                        bind:tap="onTap"
                      >
                        
      27分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{28}}"
                        bind:tap="onTap"
                      >
                        
      28分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{29}}"
                        bind:tap="onTap"
                      >
                        
      29分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{30}}"
                        bind:tap="onTap"
                      >
                        
      30分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{31}}"
                        bind:tap="onTap"
                      >
                        
      31分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{32}}"
                        bind:tap="onTap"
                      >
                        
      32分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{33}}"
                        bind:tap="onTap"
                      >
                        
      33分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{34}}"
                        bind:tap="onTap"
                      >
                        
      34分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{35}}"
                        bind:tap="onTap"
                      >
                        
      35分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{36}}"
                        bind:tap="onTap"
                      >
                        
      36分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{37}}"
                        bind:tap="onTap"
                      >
                        
      37分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{38}}"
                        bind:tap="onTap"
                      >
                        
      38分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{39}}"
                        bind:tap="onTap"
                      >
                        
      39分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{40}}"
                        bind:tap="onTap"
                      >
                        
      40分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{41}}"
                        bind:tap="onTap"
                      >
                        
      41分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{42}}"
                        bind:tap="onTap"
                      >
                        
      42分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{43}}"
                        bind:tap="onTap"
                      >
                        
      43分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{44}}"
                        bind:tap="onTap"
                      >
                        
      44分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{45}}"
                        bind:tap="onTap"
                      >
                        
      45分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{46}}"
                        bind:tap="onTap"
                      >
                        
      46分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{47}}"
                        bind:tap="onTap"
                      >
                        
      47分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{48}}"
                        bind:tap="onTap"
                      >
                        
      48分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{49}}"
                        bind:tap="onTap"
                      >
                        
      49分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{50}}"
                        bind:tap="onTap"
                      >
                        
      50分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{51}}"
                        bind:tap="onTap"
                      >
                        
      51分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{52}}"
                        bind:tap="onTap"
                      >
                        
      52分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{53}}"
                        bind:tap="onTap"
                      >
                        
      53分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{54}}"
                        bind:tap="onTap"
                      >
                        
      54分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{55}}"
                        bind:tap="onTap"
                      >
                        
      55分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{56}}"
                        bind:tap="onTap"
                      >
                        
      56分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{57}}"
                        bind:tap="onTap"
                      >
                        
      57分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{58}}"
                        bind:tap="onTap"
                      >
                        
      58分
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{59}}"
                        bind:tap="onTap"
                      >
                        
      59分
    
                      </wx-view>
                    </wx-view>
                  </wx-scroll-view>
                </t-picker-item>
                <t-picker-item
                  class="t-date-time-picker__item"
                  index="index"
                >
                  <wx-view
                    class="t-picker-item__group class t-class"
                    style=""
                    bind:touchcancel="onTouchEnd"
                    bind:touchend="onTouchEnd"
                    catch:touchmove="onTouchMove"
                    bind:touchstart="onTouchStart"
                  >
                    <wx-view
                      class="t-picker-item__wrapper"
                      style="transition: transform 0ms cubic-bezier(0.215, 0.61, 0.355, 1); transform: translate3d(0, 0px, 0)"
                    >
                      <wx-view
                        class="t-picker-item__item t-picker-item__item--active"
                        data-index="{{0}}"
                        bind:tap="onTap"
                      >
                        
      0秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{1}}"
                        bind:tap="onTap"
                      >
                        
      1秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{2}}"
                        bind:tap="onTap"
                      >
                        
      2秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{3}}"
                        bind:tap="onTap"
                      >
                        
      3秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{4}}"
                        bind:tap="onTap"
                      >
                        
      4秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{5}}"
                        bind:tap="onTap"
                      >
                        
      5秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{6}}"
                        bind:tap="onTap"
                      >
                        
      6秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{7}}"
                        bind:tap="onTap"
                      >
                        
      7秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{8}}"
                        bind:tap="onTap"
                      >
                        
      8秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{9}}"
                        bind:tap="onTap"
                      >
                        
      9秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{10}}"
                        bind:tap="onTap"
                      >
                        
      10秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{11}}"
                        bind:tap="onTap"
                      >
                        
      11秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{12}}"
                        bind:tap="onTap"
                      >
                        
      12秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{13}}"
                        bind:tap="onTap"
                      >
                        
      13秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{14}}"
                        bind:tap="onTap"
                      >
                        
      14秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{15}}"
                        bind:tap="onTap"
                      >
                        
      15秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{16}}"
                        bind:tap="onTap"
                      >
                        
      16秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{17}}"
                        bind:tap="onTap"
                      >
                        
      17秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{18}}"
                        bind:tap="onTap"
                      >
                        
      18秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{19}}"
                        bind:tap="onTap"
                      >
                        
      19秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{20}}"
                        bind:tap="onTap"
                      >
                        
      20秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{21}}"
                        bind:tap="onTap"
                      >
                        
      21秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{22}}"
                        bind:tap="onTap"
                      >
                        
      22秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{23}}"
                        bind:tap="onTap"
                      >
                        
      23秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{24}}"
                        bind:tap="onTap"
                      >
                        
      24秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{25}}"
                        bind:tap="onTap"
                      >
                        
      25秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{26}}"
                        bind:tap="onTap"
                      >
                        
      26秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{27}}"
                        bind:tap="onTap"
                      >
                        
      27秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{28}}"
                        bind:tap="onTap"
                      >
                        
      28秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{29}}"
                        bind:tap="onTap"
                      >
                        
      29秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{30}}"
                        bind:tap="onTap"
                      >
                        
      30秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{31}}"
                        bind:tap="onTap"
                      >
                        
      31秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{32}}"
                        bind:tap="onTap"
                      >
                        
      32秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{33}}"
                        bind:tap="onTap"
                      >
                        
      33秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{34}}"
                        bind:tap="onTap"
                      >
                        
      34秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{35}}"
                        bind:tap="onTap"
                      >
                        
      35秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{36}}"
                        bind:tap="onTap"
                      >
                        
      36秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{37}}"
                        bind:tap="onTap"
                      >
                        
      37秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{38}}"
                        bind:tap="onTap"
                      >
                        
      38秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{39}}"
                        bind:tap="onTap"
                      >
                        
      39秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{40}}"
                        bind:tap="onTap"
                      >
                        
      40秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{41}}"
                        bind:tap="onTap"
                      >
                        
      41秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{42}}"
                        bind:tap="onTap"
                      >
                        
      42秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{43}}"
                        bind:tap="onTap"
                      >
                        
      43秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{44}}"
                        bind:tap="onTap"
                      >
                        
      44秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{45}}"
                        bind:tap="onTap"
                      >
                        
      45秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{46}}"
                        bind:tap="onTap"
                      >
                        
      46秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{47}}"
                        bind:tap="onTap"
                      >
                        
      47秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{48}}"
                        bind:tap="onTap"
                      >
                        
      48秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{49}}"
                        bind:tap="onTap"
                      >
                        
      49秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{50}}"
                        bind:tap="onTap"
                      >
                        
      50秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{51}}"
                        bind:tap="onTap"
                      >
                        
      51秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{52}}"
                        bind:tap="onTap"
                      >
                        
      52秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{53}}"
                        bind:tap="onTap"
                      >
                        
      53秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{54}}"
                        bind:tap="onTap"
                      >
                        
      54秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{55}}"
                        bind:tap="onTap"
                      >
                        
      55秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{56}}"
                        bind:tap="onTap"
                      >
                        
      56秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{57}}"
                        bind:tap="onTap"
                      >
                        
      57秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{58}}"
                        bind:tap="onTap"
                      >
                        
      58秒
    
                      </wx-view>
                      <wx-view
                        class="t-picker-item__item"
                        data-index="{{59}}"
                        bind:tap="onTap"
                      >
                        
      59秒
    
                      </wx-view>
                    </wx-view>
                  </wx-scroll-view>
                </t-picker-item>
                <wx-view
                  class="t-picker__mask t-picker__mask--top"
                />
                <wx-view
                  class="t-picker__mask t-picker__mask--bottom"
                />
                <wx-view
                  class="t-picker__indicator"
                />
              </wx-view>
            </wx-view>
          </wx-view>
        </wx-view>
        <t-overlay
          id="popup-overlay"
          bind:tap="handleOverlayClick"
        >
          <wx-view
            ariaLabel="关闭"
            ariaRole="button"
            class="t-overlay t-fade-enter t-fade-enter-active"
            style="z-index: 11000;  "
            bind:tap="handleClick"
            catch:touchmove="noop"
            bind:transitionend="onTransitionEnd"
          />
        </t-overlay>
      </t-popup>
    </t-picker>
  </t-date-time-picker>
</main>
`;
